@@ -121,12 +121,6 @@ namespace DFHack
         friend int  ::SDL_Init(uint32_t flags);
         friend int  ::wgetch(WINDOW * w);
 #endif
-        friend int  ::egg_init(void);
-        friend int  ::egg_shutdown(void);
-        friend int  ::egg_tick(void);
-        friend int  ::egg_prerender(void);
-        friend int  ::egg_sdl_event(SDL::Event* event);
-        friend int  ::egg_curses_event(int orig_return);
     public:
         /// Get the single Core instance or make one.
         static Core& getInstance()
@@ -205,7 +199,6 @@ namespace DFHack
 
         bool Init();
         int Update (void);
-        int TileUpdate (void);
         int Shutdown (void);
         int DFH_SDL_Event(SDL::Event* event);
         bool ncurses_wgetch(int in, int & out);
